          discover the context of the failing subroutine, and
          ->return() to get a list of what it returned.

        * BUGFIX: ->function from autodie::exception now returns
          the original name of the dying sub, rather than its imported
          name.  For example, 'File::Copy::copy' rather than 'main::copy'.
          Core functions continue to always return 'CORE::whatever'.

2.01  Wed Jul  1 01:31:24 AUSEST 2009

        * DOCUMENTATION: General copyediting and tidy-up
          (Thanks to Toby Corkindale)

        * BUGFIX: Warnings are no longer emitted when undefined values
          are compared by hinting routines.

        * BUGFIX: Hints for File::Copy now operate correctly under
          Perl 5.10.1.

        * BUGFIX: Inheritance is now considered sufficient to declare
          allegiance to the hints provider role under Perl 5.8.x.
          (Thanks to Glenn Fowler)

        * TEST: hints.t no longer throws failures under Perl 5.10.1.

        * TEST: pod-coverage.t (author test) no longer fails if
          Sub::Identify is not installed.
          (Thanks to Jonathan Yu. RT #47437)

2.00  Mon Jun 29 01:24:49 AUSEST 2009

        * FEATURE: autodie can now accept hints regarding how
          user and module subroutines should be handled.  See
          autodie::hints for more information.

        * INTERFACE: The calls to the internal subroutines
          one_invocation() and write_invocation() have changed.
          An additional argument (the user subroutine reference) is
          passed as the second-last argument.  This may break code
          that previously tried to call these subroutines directly.

        * BUGFIX: Calls to subroutines to File::Copy should now
          correctly throw exceptions when called in a list context.

        * BUGFIX: An internal error where autodie could potentially
          fail to correctly report a dying function's name has been
          fixed.
