@@ -17,3 +17,4 @@ merge-core.pl
 doc/perl-tip.pod
 .*\.swp$
 doc/tpr.pod
+^autodie-\d+\.\d+
